# Terraria-Character-Editor-1.4.5-Calamity-Thorium

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CHANGELOG.md  CMakeCache.txt  CMakeConfigureLog.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.vcxproj  INSTALL.vcxproj.filters  InstallScripts.json  LICENSE  README.md  SECURITY.md  SUPPORT.md  TargetDirectories.txt  Terraria 1.4.5+ Inventory & Character Studio.slnx  Terraria Inventory Editor.rar  TerrariaEditor2026.sln  TerrariaEditor2026.vcxproj  TerrariaEditor2026.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  generate.stamp.depend  generate.stamp.list  imgui.ini  imgui.vcxproj  imgui.vcxproj.filters  install_manifest.txt
4.1.2-msvc8/: CMakeCCompiler.cmake  CMakeCXXCompiler.cmake
4.1.2-msvc8/CompilerIdC/Debug/: CompilerIdC.exe.recipe
4.1.2-msvc8/CompilerIdC/Debug/CompilerIdC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CompilerIdC.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
4.1.2-msvc8/CompilerIdCXX/Debug/: CompilerIdCXX.exe.recipe
4.1.2-msvc8/CompilerIdCXX/Debug/CompilerIdCXX.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CompilerIdCXX.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
4.1.2-msvc8/VCTargetsPath/x64/Debug/: VCTargetsPath.recipe
4.1.2-msvc8/VCTargetsPath/x64/Debug/VCTargetsPath.tlog/: VCTargetsPath.lastbuildstate
Terraria 1.4.5+ Inventory & Character Studio/: Terraria 1.4.5+ Inventory & Character Studio.vcxproj
Terraria 1.4.5+ Inventory & Character Studio/x64/Debug/: Terraria 1.4.5+ Inventory & Character Studio.exe.recipe
Terraria 1.4.5+ Inventory & Character Studio/x64/Debug/Terraria.43d9395a.tlog/: Terraria 1.4.5+ Inventory & Character Studio.lastbuildstate
TerrariaEditor2026.dir/Release/: TerrariaEditor2026.exe.recipe
TerrariaEditor2026.dir/Release/Terraria.1081E320.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
data/: recent_players.json
imgui.dir/Release/: imgui.lib.recipe
imgui.dir/Release/imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  imgui.lastbuildstate
src/: AppUI.cpp  AppUI.h  Item.h  ItemDatabase.cpp  ItemDatabase.h  PlayerData.h  PlayerSerialization.cpp  PlayerSerialization.h  main.cpp
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
